--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-email/components": "0.0.31",
     "@react-email/font": "0.0.9",
     "embla-carousel-react": "^8.5.1",
+    "lucide-react": "^0.544.0",
     "next": "15.1.2",
     "query-string": "^9.1.1",
     "react": "19.0.0",
